Tentative bug fix for navbar white space

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -361,7 +361,7 @@ section {
    width: 20%;
 
    .navbar-inner {
-     min-height: 72px;
+     min-height: 76px;
    }
 }
 
